Atualizar configurações do polybar e scripts

--- a/polybar/config/config.ini
+++ b/polybar/config/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [settings]
-include-file = /home/erick/.config/polybar/themes/purple-eva01.ini
+include-file = ~/.config/polybar/themes/purple-eva01.ini
 
 [bar/purple]
 width = 100%
